Core/xpipe-lab/src/resources/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: dev-jenkins-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: jenkins
              port:
                number: 80
  tls:
  - hosts:
    - dev-jenkins-xpipe.sindria.org
    secretName: tls-sindriaorg
